umi: overlay: Don't use light sensor for pocket lock

--- a/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
@@ -73,4 +73,7 @@
         <item>video1:Movie</item>
     </string-array>
 
+    <!-- Pocket Lock -->
+    <bool name="config_pocketUseLightSensor">false</bool>
+
 </resources>
